--- a/public/index.html
+++ b/public/index.html
@@ -800,8 +800,8 @@
                         pdfContainer.style.width = '180mm';
                         pdfContainer.style.padding = '15mm';
                         pdfContainer.style.background = '#fff';
-                        pdfContainer.style.fontSize = '12px';
-                        pdfContainer.style.lineHeight = '1.5';
+                        pdfContainer.style.fontSize = '14px'; // حجم خط مناسب
+                        pdfContainer.style.lineHeight = '1.6';
                         pdfContainer.style.display = 'none';
                         document.body.appendChild(pdfContainer);
 
@@ -815,18 +815,19 @@
                                 }
                                 body > *:not(#pdfContainer) { display: none; }
                                 #pdfContainer { display: block !important; }
-                                .page-break { page-break-before: always; }
-                                .footer {
-                                    position: fixed;
-                                    bottom: 10mm;
-                                    width: 100%;
-                                    text-align: center;
-                                    font-size: 10px;
-                                    color: #666;
-                                }
-                                table { width: 100%; border-collapse: collapse; }
-                                th, td { border: 1px solid #ccc; padding: 5px; text-align: right; }
-                                th { background: #5C4033; color: #fff; }
+                                .section { page-break-before: always; margin-bottom: 15px; }
+                                .section:first-child { page-break-before: avoid; }
+                                .header { background: #003087; color: #fff; padding: 10px; text-align: center; margin-bottom: 20px; }
+                                h1 { font-size: 18px; margin: 0; }
+                                h2 { font-size: 16px; color: #003087; margin-bottom: 5px; }
+                                hr { border: 1px solid #003087; margin: 5px 0; }
+                                table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+                                th, td { border: 1px solid #ccc; padding: 8px; text-align: right; font-size: 14px; }
+                                th { background: #003087; color: #fff; }
+                                td { background: #f9f9f9; }
+                                .footer { position: fixed; bottom: 10mm; width: 100%; text-align: center; font-size: 12px; color: #666; }
+                                p { margin: 5px 0; }
+                                .content { margin: 0 10px; } // حدود داخلية للكتابة
                             }
                         `;
                         document.head.appendChild(style);
@@ -834,18 +835,19 @@
                         // دالة لإضافة قسم
                         const addSection = (title, items, isTable = false) => {
                             const section = document.createElement('div');
-                            section.style.marginBottom = '15px';
+                            section.className = 'section';
                             const titleEl = document.createElement('h2');
-                            titleEl.style.fontSize = '16px';
-                            titleEl.style.color = '#5C4033';
                             titleEl.textContent = title;
                             section.appendChild(titleEl);
                             section.appendChild(document.createElement('hr'));
 
+                            const content = document.createElement('div');
+                            content.className = 'content';
+
                             if (isTable) {
                                 const table = document.createElement('table');
                                 const thead = document.createElement('thead');
-                                thead.innerHTML = '<tr><th>البند</th><th>التكلفة</th></tr>';
+                                thead.innerHTML = '<tr><th>البند</th><th>القيمة</th></tr>';
                                 table.appendChild(thead);
                                 const tbody = document.createElement('tbody');
                                 items.forEach(item => {
@@ -854,92 +856,82 @@
                                     tbody.appendChild(row);
                                 });
                                 table.appendChild(tbody);
-                                section.appendChild(table);
+                                content.appendChild(table);
                             } else {
                                 items.forEach(item => {
                                     const p = document.createElement('p');
                                     p.textContent = item;
-                                    p.style.margin = '5px 0';
-                                    section.appendChild(p);
+                                    content.appendChild(p);
                                 });
                             }
+                            section.appendChild(content);
                             pdfContainer.appendChild(section);
                         };
 
                         // العنوان الرئيسي
                         const header = document.createElement('div');
-                        header.style.background = '#E8B923';
-                        header.style.padding = '10px';
-                        header.style.textAlign = 'center';
-                        header.style.marginBottom = '20px';
+                        header.className = 'header';
                         header.innerHTML = `
-                            <h1 style="color:#fff;font-size:18px">تقرير تكاليف البناء</h1>
-                            <p style="color:#fff;font-size:12px">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
+                            <h1>تقرير تكاليف البناء</h1>
+                            <p style="font-size:14px">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
                         `;
                         pdfContainer.appendChild(header);
 
                         // 1. معلومات الشركة
-                        const companyItems = (pdfData.companyInfo?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || ''}`);
+                        const companyItems = [
+                            `الاسم: ${pdfData.companyInfo.name}`,
+                            `الوصف: ${pdfData.companyInfo.description}`,
+                            `الهاتف: ${pdfData.companyInfo.contact.phone}`,
+                            `البريد الإلكتروني: ${pdfData.companyInfo.contact.email}`,
+                            `العنوان: ${pdfData.companyInfo.contact.address}`
+                        ];
                         addSection('معلومات الشركة', companyItems);
 
                         // 2. بيانات المدخلات
-                        const customerItems = (pdfData.inputData?.customer?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || ''}`);
-                        addSection('معلومات العميل', customerItems);
+                        const customerItems = (pdfData.inputData.customer.fields || []).map(field => `${field.label}: ${field.value}`);
+                        addSection(pdfData.inputData.customer.title, customerItems);
 
-                        const locationItems = (pdfData.inputData?.location?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || ''}`);
-                        addSection('معلومات الموقع', locationItems);
+                        const locationItems = (pdfData.inputData.location.fields || []).map(field => `${field.label}: ${field.value}`);
+                        addSection(pdfData.inputData.location.title, locationItems);
 
-                        const landItems = (pdfData.inputData?.land?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || ''} ${field.unit || ''}`);
-                        addSection('معلومات الأرض', landItems);
+                        const landItems = (pdfData.inputData.land.fields || []).map(field => `${field.label}: ${field.value} ${field.unit || ''}`);
+                        addSection(pdfData.inputData.land.title, landItems);
 
-                        const buildingItems = (pdfData.inputData?.building?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || ''} ${field.unit || ''}`);
-                        addSection('تفاصيل المبنى', buildingItems);
+                        const buildingItems = (pdfData.inputData.building.fields || []).map(field => `${field.label}: ${field.value} ${field.unit || ''}`);
+                        addSection(pdfData.inputData.building.title, buildingItems);
 
                         // 3. الكميات
-                        const quantityItems = [];
-                        (pdfData.quantities?.sections || []).forEach(section => {
-                            quantityItems.push(section.subtitle || 'قسم غير محدد');
-                            (section.items || []).forEach(item => {
-                                quantityItems.push(`${item.name || 'غير محدد'}: ${item.value || ''} ${item.unit || ''}`);
-                            });
+                        (pdfData.quantities.sections || []).forEach(section => {
+                            const quantityItems = section.items.map(item => `${item.name}: ${item.value} ${item.unit || ''}`);
+                            addSection(section.subtitle, quantityItems);
                         });
-                        addSection('الكميات', quantityItems);
 
                         // 4. الحسابات الإنشائية
-                        const engineeringItems = [];
-                        (pdfData.engineering?.sections || []).forEach(section => {
-                            engineeringItems.push(section.subtitle || 'قسم غير محدد');
-                            (section.items || []).forEach(item => {
-                                engineeringItems.push(`${item.name || 'غير محدد'}: ${item.value || ''} ${item.unit || ''}`);
-                            });
+                        (pdfData.engineering.sections || []).forEach(section => {
+                            const engineeringItems = section.items.map(item => `${item.name}: ${item.value} ${item.unit || ''}`);
+                            addSection(section.subtitle, engineeringItems);
                         });
-                        addSection('الحسابات الإنشائية', engineeringItems);
 
                         // 5. التكاليف (جدول)
-                        const costItems = (pdfData.costs?.items || []).map(item => [
-                            item.name || 'غير محدد',
-                            `${item.value?.toLocaleString('ar-IQ') || '0'} ${item.unit || ''}`
+                        const costItems = (pdfData.costs.items || []).map(item => [
+                            item.name,
+                            `${item.value.toLocaleString('ar-IQ')} ${item.unit}`
                         ]);
-                        costItems.push(['الإجمالي', `${pdfData.costs?.total?.toLocaleString('ar-IQ') || '0'} د.ع`]);
-                        addSection('التكاليف', costItems, true);
+                        costItems.push(['الإجمالي', `${pdfData.costs.total.toLocaleString('ar-IQ')} د.ع`]);
+                        addSection(pdfData.costs.title, costItems, true);
 
                         // 6. أسعار المواد
-                        const materialItems = (pdfData.materialPrices?.items || []).map(item => `${item.name || 'غير محدد'}: ${item.value?.toLocaleString('ar-IQ') || '0'} ${item.unit || ''}`);
-                        addSection('أسعار المواد', materialItems);
+                        const materialItems = (pdfData.materialPrices.items || []).map(item => `${item.name}: ${item.value.toLocaleString('ar-IQ')} ${item.unit}`);
+                        addSection(pdfData.materialPrices.title, materialItems);
 
                         // إضافة تذييل للترقيم
-                        const pageCount = Math.ceil(pdfContainer.offsetHeight / 260); // تقدير عدد الصفحات
-                        for (let i = 1; i <= pageCount; i++) {
+                        const pageCount = document.querySelectorAll('.section').length; // عدد الأقسام
+                        document.querySelectorAll('.section').forEach((section, index) => {
                             const footer = document.createElement('div');
                             footer.className = 'footer';
-                            footer.textContent = `صفحة ${i} من ${pageCount}`;
-                            pdfContainer.appendChild(footer);
-                            if (i < pageCount) {
-                                const pageBreak = document.createElement('div');
-                                pageBreak.className = 'page-break';
-                                pdfContainer.appendChild(pageBreak);
-                            }
-                        }
+                            footer.textContent = `صفحة ${index + 1} من ${pageCount}`;
+                            section.appendChild(footer);
+                        });
 
                         // فتح نافذة الطباعة
                         window.print();
